@@ -53,6 +53,7 @@
 - Adds status detection for an httpRequest
 - Fix ANGLE GLES renderer on dekstop (#7274)
 - Architecture support: Support for Linux RISC-V has been added. The gdx-xxx-natives-desktop.jar files now also contain native libraries for this architecture.
+- Add setter equivalent to Color constants: Color.ORANGE is to mycolor.setToOrange()
 
 [1.12.1]
 - LWJGL3 Improvement: Audio device is automatically switched if it was changed in the operating system.
